@@ -72,6 +72,7 @@ Application Changes:
 - Adept Way discounts now properly only take Magic rating into account and do not factor in Power Point metamagics. Fixes #5145.
 - Attempting to add an incorrectly formatted file as an image to a character no longer causes the program to crash.
 - Fixed AIs not being able to buy programs in career mode. Closes #5146
+- Dealer Connection now works properly for characters saved in a non-English language.
 
 Data Changes:
 - Corrected the categories (and therefore also mounts, concealabilities, and ranges) for the Krime AKM-SU97, the Krime Ditch, the Krime Stopper-II, the Krime Soldier, and the Krime Ripper as per forum errata found here: https://forums.shadowruntabletop.com/index.php?topic=31750.msg544923#msg544923.
